@@ -3,6 +3,9 @@ This file lists the most important changes to
 the previous released version. For a full list of changes
 please refer to the ChangeLog file.
 
+New for version 2.5+:
+ - Add possibility to add delay after every character transmission.
+
 New for version 2.5:
  - Handle device reconnected more smoothly (USB-serial dongles)
  - Translation updates: Danish
